[package]
name = "source-count"
version = "0.1.0"
authors = ["colinblack <chengpeng424@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
getopts = "0.2"
nix = "0.19.0"
mio = { version = "0.7.0", features = ["os-poll", "tcp"]}
